nuevo scanner usado

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.2.9",
     "history": "5.0.1",
     "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
     "jspdf": "^2.5.1",
     "notistack": "2.0.3",
     "nprogress": "0.2.0",
@@ -46,10 +47,12 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
+    "react-zxing": "^2.0.2",
     "scandit-sdk": "^5.15.0",
     "styled-components": "^5.3.5",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.0",
+    "use-sound": "^4.0.3",
     "uuid": "^9.0.1",
     "web-vitals": "2.1.2",
     "yup": "^0.32.11"
