--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "styled-components": "^5.3.5",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.0",
+    "sweetalert2": "^11.12.4",
     "use-sound": "^4.0.3",
     "uuid": "^9.0.1",
     "web-vitals": "2.1.2",
